<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/your_dialog_root_element"
    android:layout_width="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_height="200dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="title"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/cancel"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancel"
        tools:ignore="VectorDrawableCompat" />



    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@id/seekbar"
        android:text="00:00"
        app:layout_constraintEnd_toStartOf="@+id/seekbar"
        app:layout_constraintBottom_toTopOf="@+id/backward"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toTopOf="@+id/pause"
        app:layout_constraintEnd_toStartOf="@+id/remainingTime"
        app:layout_constraintStart_toEndOf="@+id/currentTime"></SeekBar>

    <TextView
        android:id="@+id/remainingTime"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@id/seekbar"
        android:text="00:00"
        app:layout_constraintBottom_toTopOf="@+id/forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekbar"/>


    <ImageView
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="2dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_fast_forward"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/pause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toStartOf="@+id/forward"
        app:layout_constraintStart_toEndOf="@+id/backward"
        app:srcCompat="@drawable/play"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:srcCompat="@drawable/ic_fast_backword"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/SpeedPalyAydio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/DeleteAudio"
        android:textColor="@color/Error"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>