...

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".controller.main.drafts.allDraft"
    android:id="@+id/allDraft">


    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_height="wrap_content"
        android:layout_below="@id/Recyclerview_All_DraftText"
        android:layout_marginTop="20dp"
        android:text="@string/Voice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recyclerview_All_DraftVoice"
        android:layout_below="@+id/VoiceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical" />
...
