<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ksu.serene.controller.main.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.ksu.serene.controller.main.report.ReportFragment"
        android:label="Report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_drafts"
        android:name="com.ksu.serene.controller.main.drafts.draftsFragment"
        android:label="Drafts"
        tools:layout="@layout/fragment_drafts" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.ksu.serene.controller.main.calendar.CalendarFragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>