...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_expandable_110_250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add_symbol"
        app:aebAnimDurationMillis="175"
...
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddVoiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_recorder_microphone"
        app:aebAnimDurationMillis="175"
...
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toTopOf="@id/button_expandable_110_250"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_text"
        app:aebAnimDurationMillis="175"
...
