...
    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_icon"
        android:title="@string/reports" />

    <item
        android:id="@+id/navigation_drafts"
        android:icon="@drawable/ic_drafts_icon"
        android:title="@string/drafts" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_icon"
...
